# lcount

./: Cargo.toml  README.md
data/dir/: index.ts
src/: main.rs
src/cli/: mod.rs
src/utils/: mod.rs
