[package]
name = "lcount"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.10", features = ["derive"] }
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0"
futures = "0.3"
